--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@faker-js/faker": "^7.1.0",
     "@fontsource/inter": "^4.5.10",
     "@mui/icons-material": "^5.8.2",
     "@mui/lab": "^5.0.0-alpha.84",
@@ -16,8 +17,10 @@
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "react": "^18.1.0",
+    "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
